# postgres_management_api

./: .pylintrc  README.md  pyproject.toml
bruno_swagger_api_requests/: bruno.json
bruno_swagger_api_requests/schema/: GET_schema-:name.bru  GET_schema-getall.bru  GET_schema-name.bru  GET_schema.bru  POST_schema.bru  PUT_schema-:name-update.bru
bruno_swagger_api_requests/table/: GET_table-:name.bru  GET_table-:schema_name-:table_name.bru  GET_table-schema-:schema_name.bru  GET_table.bru  POST_table.bru  PUT_:table-update.bru
columns/: views.py
columns/repositories/: column.py
conf/: .env  .env.example  settings.py  urls.py
env/: pyvenv.cfg
generics/classes/: database_manager.py
schemas/: urls.py  views.py
schemas/repositories/: schemas.py
schemas/service/: errors.py
tables/: urls.py  views.py
tables/repositories/: tables.py
tables/service/: errors.py
utils/types/: columns.py  schema.py  table.py
